# plugin_engine

./: README
Engine/: CMakeLists.txt  Config.h  Core.cpp  Core.h  Plugin.cpp  Plugin.h  PluginAServer.cpp  PluginAServer.h  README  SharedLibrary.h  compile.sh
ExampleApp/: App.cpp  CMakeLists.txt
PluginA/: CMakeLists.txt  Config.h  PluginA.cpp  PluginA.h
